# rln-external-signer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/signer-conformance/: Cargo.toml
crates/signer-conformance/src/: lib.rs
crates/signer-contract/: Cargo.toml
crates/signer-native-core/: Cargo.toml
crates/signer-native-core/src/: lib.rs
crates/signer-testkit/: Cargo.toml
crates/signer-testkit/src/: lib.rs
crates/signer-vls-adapter/: Cargo.toml
crates/signer-vls-adapter/src/: lib.rs
src/: contract.rs  ldk_keys_manager_material.rs  lib.rs  native_core.rs  test_utils.rs  vls_adapter.rs
src/tests/: conformance.rs
