[workspace]
members = [
  "crates/signer-contract",
  "crates/signer-vls-adapter",
  "crates/signer-native-core",
  "crates/signer-testkit",
  "crates/signer-conformance",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0-alpha"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
