[package]
name = "signer-external"
edition = "2021"
license = "MIT"
version = "0.1.0-alpha"

[features]
default = ["without-vls"]
with-vls = [
    "dep:vls-protocol-client",
    "dep:vls-protocol",
    "dep:vls-protocol-signer",
    "dep:lightning-signer",
]
without-vls = []

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcoin = "0.32"
hex = "0.4"
base64 = "0.22"
tracing = "0.1"
vls-protocol-client = { version = "0.14.0", optional = true }
vls-protocol = { version = "0.14.0", optional = true }
vls-protocol-signer = { version = "0.14.0", optional = true }
lightning-signer = { package = "vls-core", version = "0.14.0", optional = true }
