[package]
name = "signer-external"
edition = "2021"
license = "MIT"
version = "0.1.0-alpha"
description = "External signer contract and VLS-backed adapter for RGB Lightning Node"
repository = "https://github.com/UTEXO-Protocol/rln-external-signer"
readme = "README.md"
rust-version = "1.88.0"

[features]
default = []
with-vls = [
    "dep:vls-protocol-client",
    "dep:vls-protocol",
    "dep:vls-protocol-signer",
    "dep:lightning-signer",
]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcoin = "0.32"
hex = "0.4"
base64 = "0.22"
tracing = "0.1"
vls-protocol-client = { version = "0.14.0", optional = true }
# `vls-protocol` remains on crates.io; only `vls-core` and
# `vls-protocol-signer` need the RGB compatibility forks.
vls-protocol = { version = "0.14.0", optional = true }
vls-protocol-signer = { version = "0.14.0", optional = true }
lightning-signer = { package = "vls-core", version = "0.14.0", optional = true, features = [
    "rgb-commitment-compat",
] }

[patch.crates-io]
vls-core = { git = "https://github.com/UTEXO-Protocol/vls-core.git", branch = "feat/rgb-compatibility" }
vls-protocol-signer = { git = "https://github.com/UTEXO-Protocol/vls-protocol-signer.git", branch = "feat/rgb-compatibility" }
